[package]
name = "csv-cooccurrence-graph"
version = "0.1.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
anyhow = "1.0.31"
indicatif = {version ="0.15.0", features = ["improved_unicode"]}
hashbrown = "0.8.0"
fasthash = "0.4.0"
fnv = "1.0.7"
itertools = "0.9.0"
indexmap = "1.4.0"
unic-ucd = "0.9.0"
serde_json = "*"
structopt = "0.3.21"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
